--- a/altTrack.WebUI/altTrack.Web.UI.csproj
+++ b/altTrack.WebUI/altTrack.Web.UI.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\altTrack\altTrack.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
