--- a/altTrack.WebUI/appsettings.json
+++ b/altTrack.WebUI/appsettings.json
@@ -5,6 +5,6 @@
     }
   },
   "AllowedHosts": "*",
-  "AltTrackBusinessService": "https://alttrack-business.azurewebsites.net",
-  "AltTrackPingService": "https://alttrack-ping.azurewebsites.net"
+  "AltTrackBusinessService": "https://alttrack-businessservice.azurewebsites.net",
+  "AltTrackPingService": "https://alttrack-pingservice.azurewebsites.net"
 }
