Simple ajax changes

--- a/altTrack.WebUI/appsettings.json
+++ b/altTrack.WebUI/appsettings.json
@@ -5,6 +5,6 @@
     }
   },
   "AllowedHosts": "*",
-  "AltTrackBusinessService": "https://alttrack-businessservice.azurewebsites.net",
-  "AltTrackPingService": "https://alttrack-pingservice.azurewebsites.net"
+  "AltTrackBusinessService": "[Deployment variable]",
+  "AltTrackPingService": "[Deployment variable]"
 }
