--- a/altTrack.BusinessService/appsettings.json
+++ b/altTrack.BusinessService/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "AltTrackPingService": "https://alttrack-pingservice.azurewebsites.net"
+  "AltTrackPingService": "[Deployment variable]"
 }
