--- a/altTrack.BusinessService/appsettings.Development.json
+++ b/altTrack.BusinessService/appsettings.Development.json
@@ -6,5 +6,6 @@
       "Microsoft": "Information"
     }
   },
-  "AltTrackPingService": "https://localhost:5201"
+  "AltTrackPingService": "https://localhost:5201",
+  "DBConnectionString": ""
 }
