--- a/altTrack.BusinessService/appsettings.json
+++ b/altTrack.BusinessService/appsettings.json
@@ -5,5 +5,6 @@
     }
   },
   "AllowedHosts": "*",
-  "AltTrackPingService": "[Deployment variable]"
+  "AltTrackPingService": "[Deployment variable]",
+  "DBConnectionString": ""
 }
