--- a/altTrack.BusinessService/appsettings.Development.json
+++ b/altTrack.BusinessService/appsettings.Development.json
@@ -7,5 +7,6 @@
     }
   },
   "AltTrackPingService": "https://localhost:5201",
-  "DBConnectionString": ""
+  "DBConnectionString": "",
+  "TimeLimit": "5"
 }
