--- a/altTrack.BusinessService/appsettings.json
+++ b/altTrack.BusinessService/appsettings.json
@@ -6,5 +6,6 @@
   },
   "AllowedHosts": "*",
   "AltTrackPingService": "[Deployment variable]",
-  "DBConnectionString": ""
+  "DBConnectionString": "[Deployment variable]",
+  "TimeLimit": "[Deployment variable]"
 }
