--- a/altTrack.BusinessService/Properties/launchSettings.json
+++ b/altTrack.BusinessService/Properties/launchSettings.json
@@ -29,7 +29,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/values",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/customers/all",
       "httpPort": 54552,
       "useSSL": true,
       "sslPort": 44313
