--- a/altTrack.PingService/Properties/launchSettings.json
+++ b/altTrack.PingService/Properties/launchSettings.json
@@ -25,6 +25,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/",
+      "httpPort": 54553,
+      "useSSL": true,
+      "sslPort": 44314
     }
   }
 }
