--- a/altTrack.WebUI/Dockerfile
+++ b/altTrack.WebUI/Dockerfile
@@ -1,20 +1,24 @@
-#FROM microsoft/dotnet:2.2-aspnetcore-runtime AS base
-#WORKDIR /app
-#EXPOSE 80
-#EXPOSE 443
-#
-#FROM microsoft/dotnet:2.2-sdk AS build
-#WORKDIR /src
-#COPY ["DataWeb/DataWeb.csproj", "DataWeb/"]
-#RUN dotnet restore "DataWeb/DataWeb.csproj"
-#COPY . .
-#WORKDIR "/src/DataWeb"
-#RUN dotnet build "DataWeb.csproj" -c Release -o /app
-#
-#FROM build AS publish
-#RUN dotnet publish "DataWeb.csproj" -c Release -o /app
-#
-#FROM base AS final
-#WORKDIR /app
-#COPY --from=publish /app .
-#ENTRYPOINT ["dotnet", "DataWeb.dll"]
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
+WORKDIR /app
+EXPOSE 80
+EXPOSE 443
+
+ENV AltTrackBusinessService="https://localhost:44313"
+ENV AltTrackPingService="https://localhost:44314"
+
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
+WORKDIR /src
+COPY ["altTrack.WebUI/altTrack.Web.UI.csproj", "altTrack.WebUI/"]
+COPY ["altTrack/altTrack.csproj", "altTrack/"]
+RUN dotnet restore "altTrack.WebUI/altTrack.Web.UI.csproj"
+COPY . .
+WORKDIR "/src/altTrack.WebUI"
+RUN dotnet build "altTrack.Web.UI.csproj" -c Release -o /app
+
+FROM build AS publish
+RUN dotnet publish "altTrack.Web.UI.csproj" -c Release -o /app
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app .
+ENTRYPOINT ["dotnet", "altTrack.Web.UI.dll"]
