--- a/altTrack.WebUI/Properties/launchSettings.json
+++ b/altTrack.WebUI/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DataWeb": {
+    "WebUI": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
